Add option to non-keyboard flyout source process

--- a/Pages/Behavior.xaml
+++ b/Pages/Behavior.xaml
@@ -28,6 +28,7 @@
             <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
+            <RowDefinition/>
         </Grid.RowDefinitions>
 
         <ui:TextBlock Text="Behavior" Grid.Row="0" Appearance="Primary" FontTypography="TitleLarge" Margin="0 0 0 10" Foreground="{DynamicResource colorNeutralForeground1}"/>
@@ -61,7 +62,7 @@
             </StackPanel>
         </ui:CardControl>
 
-        <ui:CardControl Icon="{ui:SymbolIcon ClipboardImage24}" Grid.Row="3" Margin="0 0 0 40">
+        <ui:CardControl Icon="{ui:SymbolIcon ClipboardImage24}" Grid.Row="3" Margin="0 0 0 10">
             <ui:CardControl.Header>
                 <StackPanel>
                     <StackPanel Orientation="Horizontal">
@@ -77,7 +78,20 @@
             </StackPanel>
         </ui:CardControl>
 
-        <ui:CardControl Icon="{ui:SymbolIcon ClipboardClock24}" Grid.Row="4" Margin="0 0 0 10">
+        <ui:CardControl Icon="{ui:SymbolIcon AppGeneric24}" Grid.Row="4" Margin="0 0 0 40" IsEnabled="{Binding Behavior.EnableNonKeyboardFlyouts}">
+            <ui:CardControl.Header>
+                <StackPanel>
+                    <ui:TextBlock Text="Show source of non-keyboard copies" FontTypography="BodyStrong" TextWrapping="WrapWithOverflow"/>
+                    <ui:TextBlock Text="Displays the process name of the app from which a non-keyboard copy was made." Appearance="Secondary" TextWrapping="WrapWithOverflow"/>
+                </StackPanel>
+            </ui:CardControl.Header>
+            <StackPanel Orientation="Horizontal">
+                <ui:TextBlock Text="Off" Margin="0 0 13 0" x:Name="ShowNonKeyboardFlyoutSourcesLabel"/>
+                <ui:ToggleSwitch IsChecked="{Binding Behavior.ShowNonKeyboardFlyoutSources}"/>
+            </StackPanel>
+        </ui:CardControl>
+
+        <ui:CardControl Icon="{ui:SymbolIcon ClipboardClock24}" Grid.Row="5" Margin="0 0 0 10">
             <ui:CardControl.Header>
                 <StackPanel>
                     <ui:TextBlock Text="Flyout lifetime" FontTypography="BodyStrong" TextWrapping="WrapWithOverflow"/>
@@ -90,7 +104,7 @@
             </StackPanel>
         </ui:CardControl>
 
-        <ui:CardControl Icon="{ui:SymbolIcon MoviesAndTv24}" Grid.Row="5" Margin="0 0 0 10">
+        <ui:CardControl Icon="{ui:SymbolIcon MoviesAndTv24}" Grid.Row="6" Margin="0 0 0 10">
             <ui:CardControl.Header>
                 <StackPanel>
                     <ui:TextBlock Text="Flyout entrance animations" FontTypography="BodyStrong" TextWrapping="WrapWithOverflow"/>
@@ -103,7 +117,7 @@
             </StackPanel>
         </ui:CardControl>
 
-        <ui:CardControl Icon="{ui:SymbolIcon MoviesAndTv24}" Grid.Row="6" Margin="0 0 0 40">
+        <ui:CardControl Icon="{ui:SymbolIcon MoviesAndTv24}" Grid.Row="7" Margin="0 0 0 40">
             <ui:CardControl.Header>
                 <StackPanel>
                     <ui:TextBlock Text="Flyout exit animations" FontTypography="BodyStrong" TextWrapping="WrapWithOverflow"/>
@@ -116,7 +130,7 @@
             </StackPanel>
         </ui:CardControl>
 
-        <ui:CardControl Icon="{ui:SymbolIcon Cursor24}" Grid.Row="7" Margin="0 0 0 10">
+        <ui:CardControl Icon="{ui:SymbolIcon Cursor24}" Grid.Row="8" Margin="0 0 0 10">
             <ui:CardControl.Header>
                 <StackPanel>
                     <ui:TextBlock Text="Show flyouts under cursor" FontTypography="BodyStrong" TextWrapping="WrapWithOverflow"/>
@@ -129,7 +143,7 @@
             </StackPanel>
         </ui:CardControl>
 
-        <ui:CardControl Icon="{ui:SymbolIcon Desktop24}" Grid.Row="8" Margin="0 0 0 10" IsEnabled="{Binding Behavior.FlyoutUnderCursor, Converter={StaticResource InverseBooleanConverter}}">
+        <ui:CardControl Icon="{ui:SymbolIcon Desktop24}" Grid.Row="9" Margin="0 0 0 10" IsEnabled="{Binding Behavior.FlyoutUnderCursor, Converter={StaticResource InverseBooleanConverter}}">
             <ui:CardControl.Header>
                 <StackPanel>
                     <ui:TextBlock Text="Flyout screen" FontTypography="BodyStrong" TextWrapping="WrapWithOverflow"/>
@@ -140,7 +154,7 @@
         </ui:CardControl>
 
 
-        <ui:CardControl Icon="{ui:SymbolIcon AlignCenterHorizontal24}" Grid.Row="9" Margin="0 0 0 10" IsEnabled="{Binding Behavior.FlyoutUnderCursor, Converter={StaticResource InverseBooleanConverter}}">
+        <ui:CardControl Icon="{ui:SymbolIcon AlignCenterHorizontal24}" Grid.Row="10" Margin="0 0 0 10" IsEnabled="{Binding Behavior.FlyoutUnderCursor, Converter={StaticResource InverseBooleanConverter}}">
             <ui:CardControl.Header>
                 <StackPanel>
                     <ui:TextBlock Text="Flyout horizontal allignment" FontTypography="BodyStrong" TextWrapping="WrapWithOverflow"/>
@@ -151,7 +165,7 @@
         </ui:CardControl>
 
 
-        <ui:CardControl Icon="{ui:SymbolIcon AlignCenterVertical24}" Grid.Row="10" Margin="0 0 0 40" IsEnabled="{Binding Behavior.FlyoutUnderCursor, Converter={StaticResource InverseBooleanConverter}}">
+        <ui:CardControl Icon="{ui:SymbolIcon AlignCenterVertical24}" Grid.Row="11" Margin="0 0 0 40" IsEnabled="{Binding Behavior.FlyoutUnderCursor, Converter={StaticResource InverseBooleanConverter}}">
             <ui:CardControl.Header>
                 <StackPanel>
                     <ui:TextBlock Text="Flyout vertical allignment" FontTypography="BodyStrong" TextWrapping="WrapWithOverflow"/>
@@ -161,7 +175,7 @@
             <ComboBox SelectedItem="{Binding Behavior.FlyoutVerticalAllignment}" x:Name="VerticalAllignmentComboBox"/>
         </ui:CardControl>
 
-        <ui:CardControl Icon="{ui:SymbolIcon SoundWaveCircle24}" Grid.Row="11" Margin="0 0 0 10">
+        <ui:CardControl Icon="{ui:SymbolIcon SoundWaveCircle24}" Grid.Row="12" Margin="0 0 0 10">
             <ui:CardControl.Header>
                 <StackPanel>
                     <ui:TextBlock Text="Enable success sounds" FontTypography="BodyStrong" TextWrapping="WrapWithOverflow"/>
@@ -174,7 +188,7 @@
             </StackPanel>
         </ui:CardControl>
 
-        <ui:CardControl Icon="{ui:SymbolIcon SoundSource24}" Grid.Row="12" Margin="0 0 0 10" IsEnabled="{Binding Behavior.EnableSuccessSound}">
+        <ui:CardControl Icon="{ui:SymbolIcon SoundSource24}" Grid.Row="13" Margin="0 0 0 10" IsEnabled="{Binding Behavior.EnableSuccessSound}">
             <ui:CardControl.Header>
                 <StackPanel>
                     <ui:TextBlock Text="Success sound" FontTypography="BodyStrong" TextWrapping="WrapWithOverflow"/>
@@ -187,7 +201,7 @@
             </StackPanel>
         </ui:CardControl>
 
-        <ui:CardControl Icon="{ui:SymbolIcon SoundWaveCircle24}" Grid.Row="13" Margin="0 0 0 10">
+        <ui:CardControl Icon="{ui:SymbolIcon SoundWaveCircle24}" Grid.Row="14" Margin="0 0 0 10">
             <ui:CardControl.Header>
                 <StackPanel>
                     <ui:TextBlock Text="Enable failure sounds" FontTypography="BodyStrong" TextWrapping="WrapWithOverflow"/>
@@ -200,7 +214,7 @@
             </StackPanel>
         </ui:CardControl>
 
-        <ui:CardControl Icon="{ui:SymbolIcon SoundSource24}" Grid.Row="14" Margin="0 0 0 40" IsEnabled="{Binding Behavior.EnableErrorSound}">
+        <ui:CardControl Icon="{ui:SymbolIcon SoundSource24}" Grid.Row="15" Margin="0 0 0 40" IsEnabled="{Binding Behavior.EnableErrorSound}">
             <ui:CardControl.Header>
                 <StackPanel>
                     <ui:TextBlock Text="Failure sound" FontTypography="BodyStrong" TextWrapping="WrapWithOverflow"/>
@@ -213,6 +227,6 @@
             </StackPanel>
         </ui:CardControl>
 
-        <ui:Button Grid.Row="15" Content="Reset behavior settings" Icon="{ui:SymbolIcon ArrowReset24}" x:Name="Reset" Click="Reset_Click" Margin="0 0 0 10"/>
+        <ui:Button Grid.Row="16" Content="Reset behavior settings" Icon="{ui:SymbolIcon ArrowReset24}" x:Name="Reset" Click="Reset_Click" Margin="0 0 0 10"/>
     </Grid>
 </Page>
